--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         app:layout_constraintVertical_bias="0.07999998" />
 
     <RadioGroup
+        android:id="@+id/radioGroup"
         android:layout_width="132dp"
         android:layout_height="97dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -120,6 +121,32 @@
         app:layout_constraintStart_toEndOf="@+id/buttonGPS"
         app:layout_constraintTop_toTopOf="@+id/buttonGPS"
         tools:ignore="TextContrastCheck"
+        android:autofillHints="" />
+
+    <Button
+        android:id="@+id/mapsBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/mapsBtn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.12"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonGPS"
+        app:layout_constraintVertical_bias="0.06999999" />
+
+    <EditText
+        android:id="@+id/editTextTextPostalAddress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="@string/mapsHint"
+        android:inputType="textPostalAddress"
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toBottomOf="@+id/mapsBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/mapsBtn"
+        app:layout_constraintTop_toTopOf="@+id/mapsBtn"
         android:autofillHints="" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
